--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '3.7'
 services:
-    mariadb:
+    jsondemodb:
         image: mariadb:latest
-        container_name: mariadb
+        container_name: jsondemodb
         init: true
         restart: always
         environment:
@@ -10,14 +10,14 @@ services:
             - "MYSQL_DATABASE=opencms"
             - "MYSQL_USER=opencms"
             - "MYSQL_PASSWORD=opencms"
-    opencms:
+    jsondemo:
         image: alkacon/opencms-docker:12.0
         container_name: jsondemo
         init: true
         restart: always
-        depends_on: [ "mariadb" ]
+        depends_on: [ "jsondemodb" ]
         links:
-            - "mariadb:mysql"
+            - "jsondemodb:mysql"
         ports:
             - "8080:8080"
         command: ["/root/wait-for.sh", "mysql:3306", "-t", "30", "--", "/root/opencms-run.sh"]
