Environment settings updated.

--- a/demo1/.env.development
+++ b/demo1/.env.development
@@ -1,2 +1,2 @@
-REACT_APP_OPENCMS_SERVER=http://localhost
-REACT_APP_OPENCMS_SERVER_IMAGE=http://localhost
+REACT_APP_OPENCMS_SERVER=http://localhost:8080
+REACT_APP_OPENCMS_SERVER_IMAGE=http://localhost:8080
